Before clenup regarding orientation change scrolling issue on IOS.

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,11 @@ body {
     overflow: hidden;
 }
 
+/*#container {
+    width: 100%;
+    height: 100%;
+}*/
+
 .arrow {
     margin: 10px;
     position:absolute;
